Ingress-Context-Path-Roting/app1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app1
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
     containers:
      - name: app1-container
        image: tejachittamuri/nginx-app1
        ports:
        - containerPort: 80
