Ingress-Context-Path-Roting/app2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app2
  template:
    metadata:
      labels:
        app: nginx-app2
    spec:
      containers:
      - name: app2-container
        image: tejachittamuri/nginx-app2
        ports:
        - containerPort: 80
