Ingress-Context-Path-Roting/app1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: nginx-app1
  ports:
  - port: 80 # Hostport
    targetPort: 80 # containerport
