Ingress-Context-Path-Roting/app2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app2-nginx-clusterip-service
spec:
  type: ClusterIP
 # type: LoadBalancer
  selector:
    app: nginx-app2
  ports:
  - port: 80 # Hostport
    targetPort: 80 # containerport
