Ingress-Context-Path-Roting/omnifood-service.yml
apiVersion: v1
kind: Service
metadata:
  name: omnifood-webapp-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: omnifood
  ports:
  - port: 80 # Hostport
    targetPort: 80 # containerport
